--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "msw": "^0.44.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.7",
+    "redux-form": "^8.3.8",
     "sass": "^1.54.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.0"
@@ -56,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
