--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "testapp",
+  "name": "prenups",
+  "homepage": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.14.1",
@@ -12,7 +15,6 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "msw": "^0.44.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
+    "react-virtualized": "^9.22.3",
     "redux-form": "^8.3.8",
     "sass": "^1.54.0",
     "typescript": "^4.7.4",
@@ -61,8 +64,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "msw": {
-    "workerDirectory": "public"
   }
 }
